# fca-multi-agent-support

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  com31.py  com32.py  com36.py  com50.py  conftest.py  debug_faq.py  docker-compose.yml  full_project.txt  full_project_context.txt  ingest.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  seed_db.py  test general.py  test_account_agent.py  test_api.py  test_compliance.py  test_coordinator.py  test_customer.py  test_db_smoke.py  test_doc.txt  test_general_agent.py  test_health.py  test_human_agent.py  test_integration.py  test_intent.py  test_product_recommender.py  test_rag.py  test_workflow.py  verify_evaluation.py  (+1 more)
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 41f7c4b95934_.py  536e165d8fe2_add_faq_table.py  f57c936ded09_initial_migration_create_customers_.py
app/: config.py  database.py  debug_wiring.py  logger.py  main.py  seed.py  seed_database.py  verify_conversation_api.py  verify_full_workflow.py  verify_hitl.py  verify_memory.py  worker.py
app/agents/: __init__.py  account_agent.py  base.py  compliance_checker.py  general_agent.py  human_agent.py  intent_classifier.py  product_recommender.py
app/api/: __init__.py  deps.py
app/api/routes/: auth.py  messages.py
app/coordinator/: __init__.py  agent_coordinator.py
app/models/: __init__.py  account.py  conversation.py  customer.py  faq.py  message.py  product.py  transaction.py
app/repositories/: __init__.py  account.py  base.py  conversation.py  customer.py  faq.py  message.py  product.py  transaction.py
app/routers/: admin.py  health.py
app/schemas/: common.py
app/services/: __init__.py  account_service.py  base.py  cache_service.py  conversation.py  customer.py  faq_service.py  message.py  product_service.py  rag_service.py  security_service.py  transaction_service.py
app/workflows/: __init__.py  message_workflow.py
docs/: architecture.md
frontend/: Dockerfile  streamlit_app.py
scripts/: 20260114_add_priority_to_conversations.py  create_golden_dataset.py  golden_q.txt  verify_evaluation.py
tests/: __init__.py  conftest.py  test_account_agent.py  test_compliance_checker.py  test_coordinator1.py  test_coordinator2.py  test_coordinator3.py  test_full_workflow1.py  test_full_workflow2.py  test_general_agent.py  test_health.py  test_human_agent.py  test_integration.py  test_intent_classifier.py  test_placeholder.py  test_product_agent.py  test_rag_search.py
tests/integration/: test_product_agent.py
